trunk/Archive2/95/0415af910cd018/output
main.cpp: In member function 'std::string Person::toString()':
main.cpp:24:2: warning: no return statement in function returning non-void [-Wreturn-type]
  }
  ^
main.cpp: At global scope:
main.cpp:47:1: error: prototype for 'Person::Person(std::string&, std::string&)' does not match any in class 'Person'
 Person::Person(std::string &Name,std::string &Address) {
 ^
main.cpp:13:7: error: candidates are: Person::Person(const Person&)
 class Person {
       ^
main.cpp:19:2: error:                 Person::Person(const string&, const string&)
  Person(const std::string &Name,const std::string &Address);
  ^
main.cpp:42:1: error:                 Person::Person()
 Person::Person(){
 ^
